<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".Dialogs.AddDialog"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/want_delete"
        android:paddingBottom="20dp"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#0288D1"
        android:paddingBottom="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingRight="5dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/YesBtn"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/delete_yes_btn"
            style="@style/Widget.MaterialComponents.Button"
            android:backgroundTint="#1976D2"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/NoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/delete_no_btn"
            style="@style/Widget.MaterialComponents.Button"
            android:backgroundTint="#1976D2"
            />

    </RelativeLayout>


</LinearLayout>